# ds-realworld-project

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
api/: main.py  schemas.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  learning_path.md
docs/guides/: 01_mlflow_basics.md  02_experiment_tracking.md
docs/superpowers/plans/: 2026-05-11-mlflow-pipeline-implementation.md
docs/superpowers/specs/: 2026-05-11-mlflow-educational-pipeline-design.md
notebooks/: 1_developer_burnout_pipeline.ipynb  2_teen_mental_health_complete_pipeline.ipynb
notebooks/azure_ml_artifacts/: best_model.pkl  encoders.pkl  model_metadata.json  scaler.pkl  score.py
notebooks/mlruns/1/models/m-02c4a35fe1464871b2d1aed3d03e62d2/artifacts/: MLmodel
notebooks/mlruns/1/models/m-1cea6351fad846e18c309637d67bc322/artifacts/: MLmodel
src/: __init__.py
src/api/: __init__.py  main.py
src/data/: downloader.py  loader.py  preprocessor.py  splitter.py
src/data_pipeline/: preprocessor.py
src/evaluation/: __init__.py  metrics.py
src/features/: engineer.py
src/mlflow_integration/: __init__.py  registry.py  tracker.py
src/models/: __init__.py  base.py  trainer.py
src/monitoring/: __init__.py  logger.py  performance.py
src/notebooks/: mlflow.db
tests/: test_api.py  test_data_loader.py  test_data_preprocessor.py  test_data_splitter.py  test_e2e_pipeline.py  test_evaluation_metrics.py  test_feature_engineer.py  test_mlflow_registry.py  test_mlflow_tracker.py  test_model_base.py  test_model_trainer.py  test_monitoring.py
(+30 files in other folders)
