[project]
name = "ds-realworld-project"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "xgboost>=1.9.0",
    "lightgbm>=3.3.0",
    "plotly>=5.14.0",
    "seaborn>=0.13.0",
    "scipy-stubs~=1.17.1",
    "imblearn>=0.0",
    "mlflow>=3.11.1",
    "shap>=0.51.0",
    "pandas-stubs~=2.3.3",
]
